--- a/AFE2016/src/main/webapp/viewsponsor.html
+++ b/AFE2016/src/main/webapp/viewsponsor.html
@@ -23,12 +23,12 @@
 		<td class="col-xs-1" ng-if="x.filekey == ''"></td>
 		<td class="col-xs-1">{{x.status}}</td>
 		<td class="col-xs-2" ng-if="x.status=='Submitted'">		
-		<button ng-click="viewsubmission(x);updatenomination(x,'Approved')">Approve</button>
-		<button ng-click="viewsubmission(x);updatenomination(x,'Rejected')">Reject</button>
+		<button type="button" class="btn btn-primary" ng-click="viewsubmission(x);updatenomination(x,'Approved')">Approve</button>
+		<button type="button" class="btn btn-primary" ng-click="viewsubmission(x);updatenomination(x,'Rejected')">Reject</button>
 		</td>
 		<td class="col-xs-2" ng-if="x.status!='Submitted'">
-		<button disabled>Approve</button>
-		<button disabled>Reject</button>
+		<button type="button" class="btn btn-primary disabled">Approve</button>
+		<button type="button" class="btn btn-primary disabled">Reject</button>
 		</td>		
 	</tr>
 </table>
