--- a/AFE2016/src/main/webapp/viewsubmissions.html
+++ b/AFE2016/src/main/webapp/viewsubmissions.html
@@ -23,13 +23,13 @@
 		<td class="col-xs-1" ng-if="x.filekey == ''"></td>
 		<td class="col-xs-1">{{x.status}}</td>
 		<td class="col-xs-1" ng-if="x.status=='Saved'">
-		<button ng-click="updatenomination(x,'Submitted')">Submit</button>
+		<button type="button" class="btn btn-primary" ng-click="updatenomination(x,'Submitted')">Submit</button>
 		</td>
 		<td class="col-xs-1" ng-if="x.status=='Submitted'">
-		<button ng-click="viewsubmission(x);updatenomination(x,'Saved')">Recall</button>
+		<button type="button" class="btn btn-primary" ng-click="updatenomination(x,'Saved')">Recall</button>
 		</td>
 		<td class="col-xs-1" ng-if="x.status=='Approved' || x.status=='Rejected'">
-		<button ng-disabled="true">No Action</button>
+		<button type="button" class="btn btn-primary disabled" >No Action</button>
 		</td>
 		<td class="col-xs-1" ng-if="x.status=='Saved'"><span
 			class="glyphicon glyphicon-remove" aria-hidden="true" ng-click="removenomination($index)"></span>
