--- a/AFE2016/src/main/webapp/viewsponsor.html
+++ b/AFE2016/src/main/webapp/viewsponsor.html
@@ -18,7 +18,7 @@
 		<td class="col-xs-2">{{x.selectedCategory}}</td>
 		<td class="col-xs-1">{{x.selectedLevel}}</td>
 		<td class="col-xs-2">{{x.nomination}}</td>
-		<td class="col-xs-2">{{x.sponsormailid}}</td>
+		<td class="col-xs-2">{{x.sponsorMailNickname}}</td>
 		<td class="col-xs-1" ng-if="x.filekey != ''"><a type="application/x-zip-compressed" href="javascript:void(0);" ng-click="downloadfile(x.filekey,x.filename,x.filetype)">{{x.filename}}</a></td>
 		<td class="col-xs-1" ng-if="x.filekey == ''"></td>
 		<td class="col-xs-1">{{x.status}}</td>
