--- a/AFE2016/src/main/webapp/submissionform.html
+++ b/AFE2016/src/main/webapp/submissionform.html
@@ -200,7 +200,7 @@
 </form>
 <script type="text/ng-template" id="displaymembers">
         <td class="col-xs-1">{{$index+1}}</td>
-        <td class="col-xs-2">{{x.employeeEmailID}}</td>
+        <td class="col-xs-2">{{x.employeeMail}}</td>
         <td class="col-xs-1">{{x.eNo}}</td>
         <td class="col-xs-2">{{x.Name}}</td>
         <td class="col-xs-2">{{x.Unit}}</td>
@@ -209,7 +209,7 @@
     </script>
 <script type="text/ng-template" id="editmembers">
         <td class="col-xs-1">{{$index+1}}</td>
-        <td class="col-xs-2"><input class="form-control" type="text" ng-model="x.employeeEmailID"></td>
+        <td class="col-xs-2"><input class="form-control" type="text" ng-model="x.employeeMail"></td>
         <td class="col-xs-1"><input class="form-control" type="text" ng-model="x.eNo"></td>
         <td class="col-xs-2"><input class="form-control" type="text" ng-model="x.Name"></td>
         <td class="col-xs-2"><input class="form-control" type="text" ng-model="x.Unit"></td>
