example issues fixed

--- a/example/src/main/webapp/readwithsql.html
+++ b/example/src/main/webapp/readwithsql.html
@@ -18,7 +18,7 @@
 			<ul class="tab">
 				<li><a href="JavaScript:void(0)" class="tablinks">Output</a></li>
 				<li class="runbutton"
-					ng-click="common.runSimplity('tutorial.readWithSql','#readwithsqlexample')"><a
+					ng-click="common.runSimplity('tutorial.readWithSql','#readwithsqlexample',{'employeeNumber':1056})"><a
 					href="JavaScript:void(0)">Run</a></li>
 			</ul>
 			<div id="OUTPUT" class="output" style="display: block">
