--- a/example/src/main/webapp/index.html
+++ b/example/src/main/webapp/index.html
@@ -1,5 +1,7 @@
 <html>
 <head>
+<meta charset="UTF-8">
+<meta http-equiv="X-UA-Compatible" content="IE=10" />
 <title>Simplity Examples</title>
 <!-- CSS -->
 <link rel="stylesheet" href="public/css/poole.css">
