--- a/AFE2016/src/main/webapp/submissionform.html
+++ b/AFE2016/src/main/webapp/submissionform.html
@@ -4,16 +4,10 @@
 		<hr>
 		<div class="row">
 			<div class="form-group col-xs-6">
-				<label for="categories">Categories</label> <select
+				<label for="categories">Categories</label> <select ng-init="nomination.selectedCategory='Select'"
 					class="form-control" id="categories"
 					ng-model="nomination.selectedCategory"
-					ng-options="x.category as x.category for x in categories">
-				</select>
-			</div>
-			<div class="form-group  col-xs-6">
-				<label for="level">DC/Regional Level</label> <select
-					class="form-control" id="levels"
-					ng-model="nomination.selectedLevel" ng-options="x for x in levels">
+					ng-options="x.category as x.category group by x.group for x in categories | orderBy:'category' ">
 				</select>
 			</div>
 		</div>
@@ -32,7 +26,16 @@
 					the same. Please limit your nomination title to 5 words (45
 					characters) </small>
 			</div>
-
+		</div>
+		<div class="form-group row">			
+			<label for="summary" class="col-xs-4 col-form-label">Executive Summary</label>
+			<div class="col-xs-10">
+			<input class="form-control" type="text" name="summary" maxlength=""
+					placeholder="Executive Summary" ng-model="nomination.summary"
+					aria-describedby="nominationHelp" required><span
+					style="color: red"
+					ng-show="showSummaryError">Enter Executive Summary.</span> 
+			</div>
 		</div>
 		<h3>Sponsor</h3>
 		<div class="row">
@@ -57,9 +60,6 @@
 					ng-model="nomination.sponsornumber" disabled>
 			</div>
 			<span style="color: red" ng-show="showSponsorError">Enter Sponsor Details</span> 
-			<small id="emailHelp"
-				class="form-text text-muted">Enter valid Email ID without
-				appending ITLINFOSYS or @infosys.com / @edgeverve.com</small>
 		</div>
 
 		<h3>Details of Members</h3>
@@ -179,7 +179,7 @@
 		
 <div class="form-group">
 		<label for="uploadNomination">Upload Nomination</label> <input
-			type="file" ng-model-instant class="form-control-file"
+			type="file" ng-model-instant class="form-control-file" accept=".zip,application/octet-stream,application/zip,application/x-zip,application/x-zip-compressed"
 			id="uploadNomination" aria-describedby="fileHelp"
 			onchange="angular.element(this).scope().fileupload(this)"> <small
 			id="fileHelp" class="form-text text-muted">
