--- a/AFE2016/src/main/webapp/submissionform.html
+++ b/AFE2016/src/main/webapp/submissionform.html
@@ -11,6 +11,7 @@
 				</select>
 			</div>
 		</div>
+		<span style="color: red" ng-show="showCategoryError">Select Category</span>
 		<hr>
 		<div class="form-group row">
 			<label for="nomination" class="col-xs-2 col-form-label">Nomination Title</label>
@@ -65,7 +66,7 @@
 		<h3>Details of Members</h3>
 		<div ng-repeat="c in categories">
 			<span ng-if="c.category == nomination.selectedCategory" ng-init="setMembers(c.noOfMembers)">The
-				maximum number of members you can nominate is : {{c.noOfMembers.max}}</span>
+				maximum number of members you can nominate is : {{maxMembers}}</span>
 		</div>
 		<div style="color: green">Please click '+' to add a member</div>
 		<span style="color: red" ng-show="showMemberError">Nominate
@@ -178,12 +179,11 @@
 		<hr>
 		
 <div class="form-group">
-		<label for="uploadNomination">Upload Nomination</label><br>
-			<span style="color: red" ng-show="fileError">Upload zip files only</span> 
-		<input type="file" ng-model-instant class="form-control-file" accept=".zip,application/octet-stream,application/zip,application/x-zip,application/x-zip-compressed"
+		<label for="uploadNomination">Upload Nomination</label> <input
+			type="file" ng-model-instant class="form-control-file" accept=".zip,application/octet-stream,application/zip,application/x-zip,application/x-zip-compressed"
 			id="uploadNomination" aria-describedby="fileHelp"
-			onchange="angular.element(this).scope().fileupload(this)"> 
-			<small id="fileHelp" class="form-text text-muted">
+			onchange="angular.element(this).scope().fileupload(this)"> <small
+			id="fileHelp" class="form-text text-muted">
 			<span ng-if="state=='new'">Please upload a zip file and limit the size of the file to 5MB only</span>
 			<span ng-if="state=='view'">Please note that the uploaded file will replace the existing file</span></small>
 	</div>
