--- a/AFE2016/src/main/webapp/submissionform.html
+++ b/AFE2016/src/main/webapp/submissionform.html
@@ -4,10 +4,10 @@
 		<hr>
 		<div class="row">
 			<div class="form-group col-xs-12">
-				<label for="categories">Categories</label> <select ng-init="nomination.selectedCategory='Select'"
-					class="form-control" id="categories"
+				<label for="categories">Categories</label> 
+				<select	class="form-control" id="categories"
 					ng-model="nomination.selectedCategory"
-					ng-options="x.category as x.category group by x.group for x in categories | orderBy:'category' ">
+					ng-options="x.category as x.category group by x.group for x in categories | orderBy:'category'">
 				</select>
 			</div>
 		</div>
@@ -65,7 +65,7 @@
 
 		<h3>Details of Members</h3>
 		<div ng-repeat="c in categories">
-			<span ng-if="c.category == nomination.selectedCategory" ng-init="setMembers(c.noOfMembers)">The
+			<span ng-if="c.category == nomination.selectedCategory" ng-init="setMembers(c)">The
 				maximum number of members you can nominate is : {{maxMembers}}</span>
 		</div>
 		<div style="color: green">Please click '+' to add a member</div>
@@ -94,7 +94,7 @@
 						ng-change="getmailsuggestion(addmember.employeeMail)"
 						typeahead="employee.mail for employee in employees | filter:$viewValue:startsWith"
 						typeahead-on-select="populatememberdata($item)">
-						<span style="color: red" ng-show="contributionError">Enter Email ID</span>
+						<span style="color: red" ng-show="memberMailError">Enter Email ID</span>
 						</td>
 					<td class="col-xs-1"><input class="form-control"
 						ng-model="addmember.eNo" placeholder="Emp No" disabled></td>
