--- a/AFE2016/src/main/webapp/viewsponsor.html
+++ b/AFE2016/src/main/webapp/viewsponsor.html
@@ -1,4 +1,4 @@
-<div>
+<div style="overflow: scroll;   height: 400px;">
 <h3>Sponsorship requests</h3>
 <div ng-if="sponsors.length == 0"><h4> There are no records to display </h4></div>
 <table  class="table" ng-if="sponsors.length > 0">
