--- a/AFE2016/src/main/webapp/viewsubmissions.html
+++ b/AFE2016/src/main/webapp/viewsubmissions.html
@@ -2,7 +2,8 @@
 	<div class="row">
 		<h3 class="col-xs-2">Submissions</h3>
 		<input class="col-xs-8 ng-pristine ng-untouched ng-valid" type="text"
-			ng-model="filterrow" style="margin-top: 20px; margin-bottom: 10px;"
+			ng-if="nominations.length > 0" ng-model="filterrow"
+			style="margin-top: 20px; margin-bottom: 10px;"
 			placeholder="Search filter">
 	</div>
 	<div ng-if="nominations.length == 0">
