--- a/AFE2016/src/main/webapp/viewsubmissions.html
+++ b/AFE2016/src/main/webapp/viewsubmissions.html
@@ -1,10 +1,11 @@
 <div style="overflow: scroll; height: 400px;">
 	<div class="row">
 		<h3 class="col-xs-2">Submissions</h3>
-		<input class="col-xs-8 ng-pristine ng-untouched ng-valid" type="text"
-			ng-if="nominations.length > 0" ng-model="filterrow"
-			style="margin-top: 20px; margin-bottom: 10px;"
-			placeholder="Search filter">
+		<div class="col-xs-8 ng-pristine ng-untouched ng-valid">
+			<input type="text" ng-model="filterrow"
+				style="margin-top: 20px; margin-bottom: 10px;width:100%"
+				placeholder="Search filter">
+		</div>
 	</div>
 	<div ng-if="nominations.length == 0">
 		<p>There are no records to display</p>
