--- a/AFE2016/src/main/webapp/viewsubmissions.html
+++ b/AFE2016/src/main/webapp/viewsubmissions.html
@@ -1,8 +1,8 @@
-<div style="overflow: scroll; height: 400px;">
+<div style="overflow-y: scroll; height: 400px;">
 	<div class="row">
 		<h3 class="col-xs-2">Submissions</h3>
 		<input class="col-xs-8 ng-pristine ng-untouched ng-valid" type="text"
-			ng-if="nominations.length > 0" ng-model="filterrow"
+			ng-model="filterrow"
 			style="margin-top: 20px; margin-bottom: 10px;"
 			placeholder="Search filter">
 	</div>
