--- a/AFE2016/src/main/webapp/submissionform.html
+++ b/AFE2016/src/main/webapp/submissionform.html
@@ -33,9 +33,10 @@
 			<div class="col-xs-10">
 			<textarea class="form-control" rows="3" maxlength="1500" name="summary"
 					placeholder="Executive Summary" ng-model="nomination.summary"
-					aria-describedby="nominationHelp" required></textarea><span
+					aria-describedby="summaryHelp" required></textarea><span
 					style="color: red"
-					ng-show="showSummaryError">Enter Executive Summary.</span> 
+					ng-show="showSummaryError">Enter Executive Summary.</span>
+					<small id="summaryHelp" required>Please limit your summary to 1500 characters</small> 
 			</div>
 		</div>
 		<h3>Sponsor</h3>
@@ -62,8 +63,8 @@
 			</div>
 			<span style="color: red" ng-show="showSponsorError">Enter Sponsor Details</span> 
 		</div>
-		<div ng-repeat="c in categories" ng-if="c.category == nomination.selectedCategory" ng-init="setMembers(c)">
-		<div ng-if="maxMembers >0">
+		<div ng-repeat="c in categories" ng-if="c.category == nomination.selectedCategory" ng-init="setMembers(c)"></div>
+		<div ng-show="showMembers">
 		<h3>Details of Members</h3>
 		<span>The maximum number of members you can nominate is : {{maxMembers}}</span>		
 		<div style="color: green">Please click '+' to add a member</div>
@@ -109,7 +110,6 @@
 					ng-include="getTemplate($index)">
 				</tr>
 			</table>
-		</div>
 		<span>**Please
 			limit the number of members to the maximum allowed under the category
 		</span>
@@ -190,6 +190,9 @@
 	<button type="submit" class="btn btn-primary" ng-if="state=='new'" ng-click="submit('Submitted')">Submit</button>
 	<button type="submit" class="btn btn-primary" ng-if="state=='view'" ng-click="disableform || updatenomination(nomination,'Submitted')">Submit</button>
 	
+	</div>
+	<div ng-if="state == 'admin'">
+	<button type="submit" class="btn btn-primary" ng-click="submit('Saved')">Save</button>
 	</div>
 	</fieldset>
 </form>
