--- a/AFE2016/src/main/webapp/viewsubmissions.html
+++ b/AFE2016/src/main/webapp/viewsubmissions.html
@@ -14,47 +14,51 @@
 		</div>
 		<table class="table table-fixed" ng-if="nominations.length > 0"
 			ng-init="viewsubmission(nominations[0])">
-			<tr class="row">
-				<th class="col-xs-1"></th>
-				<th class="col-xs-2">Category</th>
-				<th class="col-xs-2">Title</th>
-				<th class="col-xs-1">Sponsor</th>
-				<th class="col-xs-1">Document File</th>
-				<th class="col-xs-1">Status</th>
-				<th class="col-xs-1">Action</th>
-				<th class="col-xs-1"></th>
-			</tr>
-			<tr ng-repeat="x in nominations | filter:filterrow" class="row"
-				ng-class="{'selected':$index == selectedRow}"
-				ng-click="setClickedRow($index);viewsubmission(x)"
-				style="cursor: pointer; margin-right: 0; margin-left: 0">
-				<td class="col-xs-1">{{$index+1}}</td>
-				<td class="col-xs-2">{{x.selectedCategory}}</td>
-				<td class="col-xs-2">{{x.nomination}}</td>
-				<td class="col-xs-2">{{x.sponsorMailNickname}}</td>
-				<td class="col-xs-1" ng-if="x.filekey != ''"><a
-					href="javascript:void(0);"
-					ng-click="downloadfile(x.filekey,x.filename,x.filetype)">{{x.filename}}</a></td>
-				<td class="col-xs-1" ng-if="x.filekey == ''"></td>
-				<td class="col-xs-1">{{x.status}}</td>
-				<td class="col-xs-1" ng-if="x.status=='Saved'">
-					<button type="button" class="btn btn-primary"
-						ng-click="setClickedRow($index);updatenomination(x,'Submitted')">Submit</button>
-				</td>
-				<td class="col-xs-1" ng-if="x.status=='Submitted'">
-					<button type="button" class="btn btn-primary"
-						ng-click="setClickedRow($index);updatenomination(x,'Saved')">Recall</button>
-				</td>
-				<td class="col-xs-1"
-					ng-if="x.status=='Approved' || x.status=='Rejected'">
-					<button type="button" class="btn btn-primary disabled">No
-						Action</button>
-				</td>
-				<td class="col-xs-1" ng-if="x.status=='Saved'"><span
-					class="glyphicon glyphicon-remove" aria-hidden="true"
-					ng-click="removenomination($index)"></span></td>
-				<td class="col-xs-1" ng-if="x.status!='Saved'"></td>
-			</tr>
+			<thead >
+				<tr class="row" style=" margin-right: 0; margin-left: 0">
+					<th class="col-xs-1"></th>
+					<th class="col-xs-2">Category</th>
+					<th class="col-xs-2">Title</th>
+					<th class="col-xs-2">Sponsor</th>
+					<th class="col-xs-1">File</th>
+					<th class="col-xs-1">Status</th>
+					<th class="col-xs-2">Action</th>
+					<th class="col-xs-1"></th>
+				</tr>
+			</thead>
+			<tbody>
+				<tr ng-repeat="x in nominations | filter:filterrow" class="row"
+					ng-class="{'selected':$index == selectedRow}"
+					ng-click="setClickedRow($index);viewsubmission(x)"
+					style="cursor: pointer; margin-right: 0; margin-left: 0">
+					<td class="col-xs-1">{{$index+1}}</td>
+					<td class="col-xs-2">{{x.selectedCategory}}</td>
+					<td class="col-xs-2">{{x.nomination}}</td>
+					<td class="col-xs-2">{{x.sponsorMailNickname}}</td>
+					<td class="col-xs-1" ng-if="x.filekey != ''"><a
+						href="javascript:void(0);"
+						ng-click="downloadfile(x.filekey,x.filename,x.filetype)">{{x.filename}}</a></td>
+					<td class="col-xs-1" ng-if="x.filekey == ''"></td>
+					<td class="col-xs-1">{{x.status}}</td>
+					<td class="col-xs-2" ng-if="x.status=='Saved'">
+						<button type="button" class="btn btn-primary"
+							ng-click="setClickedRow($index);updatenomination(x,'Submitted')">Submit</button>
+					</td>
+					<td class="col-xs-2" ng-if="x.status=='Submitted'">
+						<button type="button" class="btn btn-primary"
+							ng-click="setClickedRow($index);updatenomination(x,'Saved')">Recall</button>
+					</td>
+					<td class="col-xs-1"
+						ng-if="x.status=='Approved' || x.status=='Rejected'">
+						<button type="button" class="btn btn-primary disabled">No
+							Action</button>
+					</td>
+					<td class="col-xs-1" ng-if="x.status=='Saved'"><span
+						class="glyphicon glyphicon-remove" aria-hidden="true"
+						ng-click="removenomination($index)"></span></td>
+					<td class="col-xs-1" ng-if="x.status!='Saved'"></td>
+				</tr>
+			</tbody>
 		</table>
 	</div>
 </div>
