--- a/AFE2016/src/main/webapp/viewsubmissions.html
+++ b/AFE2016/src/main/webapp/viewsubmissions.html
@@ -36,11 +36,11 @@
 			<td class="col-xs-1">{{x.status}}</td>
 			<td class="col-xs-1" ng-if="x.status=='Saved'">
 				<button type="button" class="btn btn-primary"
-					ng-click="setClickedRow($index);updatenomination(x,'Submitted')">Submit</button>
+					ng-click="setClickedRow($index);!getConfirmation('Are you sure you want to submit your nomination to the sponsor?') || updatenomination(x,'Submitted')">Submit</button>
 			</td>
 			<td class="col-xs-1" ng-if="x.status=='Submitted'">
 				<button type="button" class="btn btn-primary"
-					ng-click="setClickedRow($index);updatenomination(x,'Saved')">Recall</button>
+					ng-click="setClickedRow($index);!getConfirmation('Are you sure want to recall this nomination?') || updatenomination(x,'Saved')">Recall</button>
 			</td>
 			<td class="col-xs-1"
 				ng-if="x.status=='Approved' || x.status=='Rejected'">
@@ -49,7 +49,7 @@
 			</td>
 			<td class="col-xs-1" ng-if="x.status=='Saved'"><span
 				class="glyphicon glyphicon-remove" aria-hidden="true"
-				ng-click="removenomination($index)"></span></td>
+				ng-click="!getConfirmation('Are you sure want to delete the nomination?') || removenomination($index)"></span></td>
 			<td class="col-xs-1" ng-if="x.status!='Saved'"></td>
 		</tr>
 	</table>
