--- a/AFE2016/src/main/webapp/submissionform.html
+++ b/AFE2016/src/main/webapp/submissionform.html
@@ -118,19 +118,18 @@
 		<hr>
 		<span>Important Guidelines</span>
 		<ul>
-			<li>Please note that only one nomination per account / project /
-				program will be allowed and accepted. Units/ BEFs should decide the
-				best category suitable for the nomination and nominate accordingly</li>
+			<li>PRIMA: The nomination process, formats, closure dates, etc. are different for PRIMA awards. Please get in touch with the PRIMA team for any clarification. </li>
+			<li>The initiative/program for which you are applying should have taken place between October 2015 – November 2016.</li>
+			<li>Please note that only one nomination per account / project / program will be allowed and accepted.</li>
+			<li> Units/ BEFs should decide the best category suitable for the nomination and nominate accordingly</li>
 			<li>Upload the Files in .zip format</li>
 			<li>Please limit the file name of your .zip file to less than
 				ten characters</li>
 			<li>If there are various programs under an account, each program
 				is eligible to be nominated once</li>
-			<li>Nomination Upload not supported by Google Chrome, Please use
-				Internet Explorer instead.</li>
 		</ul>
 		<hr>
-		<div class="container-fluid" ng-if="state=='new' || state=='view'">
+		<div class="container-fluid" ng-if="state != 'sponsor'">
 			<div class="row">
 				<div class="form-check col-xs-6">
 					<label class="form-check-label"> <input type="checkbox" ng-model="nomination.checkbox[0]"
@@ -151,14 +150,14 @@
 				</div>
 				<div class="form-check col-xs-6">
 					<label class="form-check-label"> <input type="checkbox" ng-model="nomination.checkbox[3]"
-						class="form-check-input"> The number of team members is restricted as per the nomination criteria 
+						class="form-check-input"> The individual contribution of the team members is provided
 					</label>
 				</div>
 			</div>
 			<div class="row">
 				<div class="form-check col-xs-6">
 					<label class="form-check-label"> <input type="checkbox" ng-model="nomination.checkbox[4]"
-						class="form-check-input"> The individual contribution of the team members is provided 
+						class="form-check-input"> The number of team members is restricted as per the nomination criteria  
 					</label>
 				</div>
 				<div class="form-check col-xs-6">
