--- a/AFE2016/src/main/webapp/viewsponsor.html
+++ b/AFE2016/src/main/webapp/viewsponsor.html
@@ -1,18 +1,12 @@
 <div style="width: 98%">
-	<div class="row">
-		<h3 class="col-xs-3">Sponsorship requests</h3>
-		<div class="col-xs-8 ng-pristine ng-untouched ng-valid">
-			<input type="text" ng-model="filterrow"
-				style="margin-top: 20px; margin-bottom: 10px; width: 100%"
-				placeholder="Search filter">
-		</div>
-	</div>
+	<h3 class="col-xs-3">Sponsorship requests</h3>
 
 	<div ng-if="sponsors.length == 0">
 		<h4>There are no records to display</h4>
 	</div>
 	<table class="table table-fixed" ng-if="sponsors.length > 0"
 		ng-init="viewsubmission(sponsors[0])">
+		<thead>
 		<tr class="row">
 			<th class="col-xs-1"></th>
 			<th class="col-xs-2">Category</th>
@@ -22,6 +16,8 @@
 			<th class="col-xs-1">Status</th>
 			<th class="col-xs-2">Action</th>
 		</tr>
+		</thead>
+		<tbody>
 		<tr ng-repeat="x in sponsors | filter:filterrow" class="row"
 			ng-class="{'selected':$index == selectedRow}"
 			ng-click="setClickedRow($index);viewsubmission(x)"
@@ -46,6 +42,7 @@
 				<button type="button" class="btn btn-primary disabled">Reject</button>
 			</td>
 		</tr>
+		</tbody>
 	</table>
 </div>
 <div ng-if="sponsors.length > 0 " ng-include="'submissionform.html'"></div>
