--- a/AFE2016/src/main/webapp/viewsubmissions.html
+++ b/AFE2016/src/main/webapp/viewsubmissions.html
@@ -1,13 +1,5 @@
 <div style="width: 98%">
-	<div class="row">
-		<h3 class="col-xs-2" style="padding: 0 0 0 35px;">Submissions</h3>
-		<div class="col-xs-8 ng-pristine ng-untouched ng-valid"
-			style="padding: 0 0 0 35px;">
-			<input type="text" ng-model="filterrow"
-				style="margin-top: 20px; margin-bottom: 10px; width: 100%"
-				placeholder="Search filter" />
-		</div>
-	</div>
+	<h3 class="col-xs-2" style="padding: 0 0 0 35px;">Submissions</h3>
 	<div ng-if="nominations.length == 0">
 		<p>There are no records to display</p>
 	</div>
@@ -26,7 +18,7 @@
 			</tr>
 		</thead>
 		<tbody>
-			<tr ng-repeat="x in nominations | filter:filterrow" class="row"
+			<tr ng-repeat="x in nominations" class="row"
 				ng-class="{'selected':$index == selectedRow}"
 				ng-click="setClickedRow($index);viewsubmission(x)"
 				style="cursor: pointer; margin-right: 0; margin-left: 0">
@@ -40,8 +32,6 @@
 				<td class="col-xs-1" ng-if="x.filekey == ''"></td>
 				<td class="col-xs-1">{{x.status}}</td>
 				<td class="col-xs-2" ng-if="x.status=='Saved'">
-					<button type="button" class="btn btn-primary"
-						ng-click="setClickedRow($index);!getConfirmation('Are you sure you want to submit your nomination to the sponsor?') ||updatenomination(x,'Submitted')">Submit</button>
 				</td>
 				<td class="col-xs-2" ng-if="x.status=='Submitted'">
 					<button type="button" class="btn btn-primary"
