--- a/AFE2016/src/main/webapp/viewsponsor.html
+++ b/AFE2016/src/main/webapp/viewsponsor.html
@@ -1,10 +1,12 @@
-<div style="width: 98%">
-	<h3 class="col-xs-3">Sponsorship requests</h3>
-
+<div style="width: 100%; padding: 10px 10px 10px 10px;">
+	<h3 style="display: inline;">Sponsorship requests</h3>
+	&nbsp;&nbsp;&nbsp;<i>(Select the row to view or edit)</i>
+	<hr>
 	<div ng-if="sponsors.length == 0">
 		<h4>There are no records to display</h4>
 	</div>
-	<table class="table table-fixed" ng-if="sponsors.length > 0"
+	<div id="parenttable">
+	<table class="table" ng-if="sponsors.length > 0"
 		ng-init="viewsubmission(sponsors[0])">
 		<thead>
 		<tr class="row">
@@ -17,10 +19,13 @@
 			<th class="col-xs-2">Action</th>
 		</tr>
 		</thead>
-		<tbody>
-		<tr ng-repeat="x in sponsors | filter:filterrow" class="row"
+		<tbody ng-repeat="x in sponsors">
+		<tr class="row accordion-toggle" 
+			data-toggle="collapse"
+			data-parent="#parenttable" href="#hidden{{x.nominationId}}"
+			aria-expanded="false" aria-controls="hidden{{x.nominationId}}"
 			ng-class="{'selected':$index == selectedRow}"
-			ng-click="setClickedRow($index);viewsubmission(x)"
+			ng-click="setClickedRow($index);viewsubmission(x);hideothers()"
 			style="cursor: pointer;">
 			<td class="col-xs-1">{{$index+1}}</td>
 			<td class="col-xs-2">{{x.selectedCategory}}</td>
@@ -42,7 +47,15 @@
 				<button type="button" class="btn btn-primary disabled">Reject</button>
 			</td>
 		</tr>
+		<tr>
+						<td colspan="9" class="hiddenRow" style="border-top: 0px;">
+							<div class="accordion-body collapse hidden{{x.nominationId}}"
+								id="hidden{{x.nominationId}}">
+								<div ng-include="'submissionform.html'"></div>
+							</div>
+						</td>
+					</tr>
 		</tbody>
 	</table>
+	</div>
 </div>
-<div ng-if="sponsors.length > 0 " ng-include="'submissionform.html'"></div>
