custom messages added

--- a/AFE2016/src/main/webapp/viewsubmissions.html
+++ b/AFE2016/src/main/webapp/viewsubmissions.html
@@ -37,12 +37,10 @@
 					<td class="col-xs-1" ng-if="x.filekey == ''"></td>
 					<td class="col-xs-1">{{x.status}}</td>
 					<td class="col-xs-2" ng-if="x.status=='Saved'">
-						<button type="button" class="btn btn-primary"
-							ng-click="setClickedRow($index);updatenomination(x,'Submitted')">Submit</button>
 					</td>
 					<td class="col-xs-2" ng-if="x.status=='Submitted'">
 						<button type="button" class="btn btn-primary"
-							ng-click="setClickedRow($index);updatenomination(x,'Saved')">Recall</button>
+							ng-click="setClickedRow($index);!getConfirmation('Are you sure want to recall this nomination?') || updatenomination(x,'Saved')">Recall</button>
 					</td>
 					<td class="col-xs-1"
 						ng-if="x.status=='Approved' || x.status=='Rejected'">
@@ -51,7 +49,7 @@
 					</td>
 					<td class="col-xs-1" ng-if="x.status=='Saved'"><span
 						class="glyphicon glyphicon-remove" aria-hidden="true"
-						ng-click="removenomination($index)"></span></td>
+						ng-click="!getConfirmation('Are you sure want to delete this nomination?') || removenomination($index)"></span></td>
 					<td class="col-xs-1" ng-if="x.status!='Saved'"></td>
 				</tr>
 				<tr>
